<resources>
    <string name="ACTIVATED">ACTIVATED</string>
    <string name="ADDRESS_ERROR_TEXT">Address submitted is incorrect. Please correct and try again.</string>
    <string name="Additional_data">Additional data</string>
    <string name="AmplitudeKey">09231407cbe47ad146724642bd66c156</string>
    <string name="Behind_the_Scenes_Magic_in_Progress">Behind the Scenes Magic in Progress</string>
    <string name="CARD_ACTIVATED">CARD ACTIVATED</string>
    <string name="CMS_HOST">www.mintmobile.com</string>
    <string name="Data_Cost">Data Cost</string>
    <string name="Email">Email</string>
    <string name="Got_it">Got it</string>
    <string name="Login_help_forgot_password_internet_line_note"><b>Note:</b>" Your Home MINTernet Line Number can be found on the gateway's display screen. From the gateway's display screen hit the scroll buttons until the Internet Line Number is shown. "</string>
    <string name="MobileKeyLD">mob-82856bdd-1e79-4d98-a55f-be43b733543b</string>
    <string name="Okay">Okay</string>
    <string name="Please_give_us_a_minute_to_set_up_your_order">Please give us a minute while we process your order</string>
    <string name="Please_give_us_a_minute_to_set_up_your_request">Please give us a minute while we process your request</string>
    <string name="Please_give_us_a_minute_to_set_up_your_service">Please give us a minute to set up your service</string>
    <string name="Unfortunately_your_cancellation_could_not_be_processed">Unfortunately, your cancellation could not be processed and did not go through. Please try again later.</string>
    <string name="We_sent_a_6digit_code_to_kid_ss" formatted="false">We sent a 6-digit code to %s***@%s.</string>
    <string name="We_sent_a_6digit_code_to_ss">We sent a 6-digit code to (xxx) xxx-%s.</string>
    <string name="We_sent_you_a_code_to_kid_ss" formatted="false">We sent you a code to %s***@%s to verify that you are the owner of this account.</string>
    <string name="We_sent_you_a_code_to_ss_">We sent you a code to (***)***%s to verify that you are the owner of this account.</string>
    <string name="We_sent_you_a_code_to_your_email_">We sent you a code to your email to verify that you are the owner of this account.</string>
    <string name="We_sent_you_a_code_to_your_phone_">We sent you a code to your phone number to verify that you are the owner of this account.</string>
    <string name="We_unable_to_cancel_your_coverage">We’re unable to cancel your coverage</string>
    <string name="WhatIsCompleteReferral">What’s a Complete Referral?</string>
    <string name="WhatIsCompleteReferralDesc">This means your friend activated their new plan and you received credit for referring them.</string>
    <string name="WhatIsDaystoreset">What does Days to Reset refer to?</string>
    <string name="WhatIsDaystoresetDesc">This is a countdown to January 1st. You have until then to refer up to 4 friends and get credit for the calendar year.</string>
    <string name="WhatIsLifetimeCreditsEarned">What does Lifetime Credits Earned mean?</string>
    <string name="WhatIsLifetimeCreditsEarnedDesc">This is the amount of credit you’ve received since becoming a Mint user.</string>
    <string name="WhatIsPendingReferral">What is Pending Status?</string>
    <string name="WhatIsPendingReferralDesc">Pending Status refers to the 15-day period it takes for Mint credit to show up in your account after your friend activates their new plan.</string>
    <string name="You_will_not_be_able_to_access_">You will not be able to access the account at this time. If you believe this was an error, please chat with us.</string>
    <string name="Your_activation_is_complete">Your activation is complete</string>
    <string name="Your_plan_is_activated_successfully">Your plan is activated successfully</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_reviews_icon_content_description">About reviews from Google Maps</string>
    <string name="about_these_results_body">When searching for businesses or places near a location, Google Maps will show local results. Several factors - primarily relevance, distance and prominence - are combined to help find the best results for a search.</string>
    <string name="about_these_results_title">About these results</string>
    <string name="activate_new_sim_card">Activate replacement SIM</string>
    <string name="activation_flow_email_footer_note">It’s important that you have a valid, secure email address on your account. It will be used for account verification and security.</string>
    <string name="activation_kids_plan_help_popup_body">"With a Mint Kid's Plan, parents have full control over their kid's wireless plan, managing everything from data usage to billing. It’s flexible, affordable and designed specifically for kids. We value your privacy, so only the parent's email will be contacted for anything beyond account notifications."</string>
    <string name="activation_kids_plan_help_popup_title">"Mint Kid's Plan"</string>
    <string name="activation_kids_plan_selection_adult_title">For an adult (18 or age of majority)</string>
    <string name="activation_kids_plan_selection_kid_title">For a kid</string>
    <string name="activation_kids_plan_selection_page_title">Who is this plan for?</string>
    <string name="activation_light_dashboard_description_text">Risk Free Trial</string>
    <string name="activation_light_dashboard_dialog_full_plan_option_button_text">Check full plan options</string>
    <string name="activation_light_dashboard_minutes_label_text">Minutes</string>
    <string name="activation_light_dashboard_subtitle_text">"Loving your trial? Then it's time for the full enchilada."</string>
    <string name="activation_light_dashboard_texts_label_text">Texts</string>
    <string name="activation_light_dashboard_trial_number_label_text">Trial number</string>
    <string name="activation_location_allow_location_text">Allow location to fill in the ZIP Code</string>
    <string name="activation_location_code_recognition_button_text">Automatic ZIP code recognition</string>
    <string name="activation_location_error_message_text">"Oops. This ZIP code isn't in our coverage area."</string>
    <string name="activation_location_faq_text">Why do I need a new number?</string>
    <string name="activation_location_manual_zip_button_text">"I'll enter ZIP code manually"</string>
    <string name="activation_location_subtitle_text">This is just your trial. You can always transfer your number later.</string>
    <string name="activation_location_title_text">"Let's get you a number"</string>
    <string name="activation_orange_choose_phone_number_text">CHOOSE YOUR PHONE NUMBER</string>
    <string name="activation_orange_number_selection_page_subtitle_hardgate">"This is the part where you decide to keep your kid's number or get them a new one… either one is good with us."</string>
    <string name="activation_orange_number_selection_page_title">First things first</string>
    <string name="activation_orange_number_selection_page_title_hardgate">Choose your phone number</string>
    <string name="activation_parental_consent_checkbox">By checking the box, I affirm the above statement is true, and that I have read and agree to Mint Mobile’s Plan Terms Conditions, Privacy Policy, Acceptable Use Policy, Verifiable Parental Consent (“VPC”) Notice, and Children’s Privacy Policy, and that I am the age of majority and legally authorized to enter into those agreements.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="continue_button">Continue</string>
    <string name="fragment_update_button_text">Visit Play Store now</string>
    <string name="fragment_update_help_text">Got questions? Call (800) 683–7392</string>
    <string name="fragment_update_subtitle_text">A new version of the app is available in the Play Store. Please update and continue using your Mint Mobile app.</string>
    <string name="fragment_update_title_text">New app update available!</string>
    <string name="if_cancelled_after_30_days_from_purchase_">If cancelled after 30 days from purchase, refunds will be a prorated depending on cancellation date.</string>
    <string name="keep_your_phone_protected">Keep your phone protected</string>
    <string name="login_help_forgot_password">Forgot password</string>
    <string name="login_help_forgot_username">Forgot username</string>
    <string name="login_help_needed_title">Need help logging in?</string>
    <string name="proceed_with_cancellation">Proceed with cancellation</string>
    <string name="save_money_header_text">Get the plan that fits you just right</string>
    <string name="save_money_save_money_text">Right size your plan</string>
    <string name="save_money_subtitle_text">"You're enjoying the no bill chill life, now keep those savings going for even longer with a 12-month plan. It will fit you like your favorite pair of jeans (or yoga pants - no judgement)"</string>
    <string name="trial_starter_pack_data_label">"MB 5G • 4G LTE
data"</string>
    <string name="trial_starter_pack_data_offer">250</string>
    <string name="trial_starter_pack_minutes_label">"Minutes of
talk"</string>
    <string name="trial_starter_pack_minutes_offer">250</string>
    <string name="trial_starter_pack_sms_label">Texts</string>
    <string name="trial_starter_pack_sms_offer">250</string>
    <string name="trial_starter_pack_subtitle_text">You get:</string>
    <string name="trial_starter_pack_title">The trial works just like a regular wireless plan</string>
    <string name="you_re_all_set_you_ll_">You’re all set. You’ll receive an email confirmation soon.</string>
    <string name="your_coverage_has_been_cancelled">Your coverage has been cancelled</string>
    <string name="your_phone_will_no_longer_be_protected_and_">Your phone will no longer be protected, and any open claims will go unresolved. If you have open claims, you’ll want to get those completed before cancelling.</string>
</resources>