<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" app:cardCornerRadius="@dimen/fun_fact_background_corner_radius" app:cardElevation="16.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/contentView" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/ivDpDialogClose" android:padding="12.0dip" android:layout_width="44.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:src="@drawable/ic_x" android:scaleType="fitEnd" android:layout_marginEnd="4.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/text_medium_gray" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/vwAreYouSure" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/text_dark_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/are_you_sure" android:fontFamily="@font/proximanova_bold" android:textAlignment="center" />
                <TextView android:textSize="16.0sp" android:textColor="@color/text_light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_inner_margin" android:text="@string/your_phone_will_no_longer_be_protected_and_" android:fontFamily="@font/proximanova_regular" android:textAlignment="center" />
                <androidx.appcompat.widget.AppCompatButton android:id="@id/btnProceed" android:background="@drawable/default_state_button" android:layout_width="fill_parent" android:layout_height="@dimen/common_button_height" android:layout_marginTop="@dimen/cta_container_margin_top" android:text="@string/proceed_with_cancellation" style="@style/DefaultButtonStyle" />
                <androidx.appcompat.widget.AppCompatButton android:textColor="@color/text_dark_gray" android:id="@id/btnCancel" android:background="@drawable/rounded_button_negative_border_drawable" android:layout_width="fill_parent" android:layout_height="@dimen/common_button_height" android:layout_marginTop="10.0dip" android:text="@string/keep_your_phone_protected" style="@style/DefaultButtonStyle" />
                <TextView android:textSize="13.0sp" android:textColor="@color/text_light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_inner_margin" android:text="@string/if_cancelled_after_30_days_from_purchase_" android:fontFamily="@font/proximanova_regular" android:textAlignment="center" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/vwGotIt" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/text_dark_gray" android:id="@id/lbGotItTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/your_coverage_has_been_cancelled" android:fontFamily="@font/proximanova_bold" android:textAlignment="center" />
                <TextView android:textSize="16.0sp" android:textColor="@color/text_light_gray" android:id="@id/lbGotItMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_inner_margin" android:text="@string/you_re_all_set_you_ll_" android:fontFamily="@font/proximanova_regular" android:textAlignment="center" />
                <androidx.appcompat.widget.AppCompatButton android:id="@id/btnGotIt" android:background="@drawable/default_state_button" android:layout_width="fill_parent" android:layout_height="@dimen/common_button_height" android:layout_marginTop="@dimen/cta_container_margin_top" android:text="@string/Got_it" style="@style/DefaultButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
