<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="fill_parent" style="@style/ContentContainer"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/trialStarterPackImage" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@null" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintBottom_toTopOf="@id/trialStarterPackTitleText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_percent="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/trial_title_text_size" android:textColor="@color/text_dark_gray" android:id="@id/trialStarterPackTitleText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_title" android:textAllCaps="true" android:fontFamily="@font/oswald_bold" android:textAlignment="center" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintBottom_toTopOf="@id/trialStarterPackSubtitleText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/trialStarterPackImage" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/trial_subtitle_text_size" android:textColor="@color/text_light_gray" android:id="@id/trialStarterPackSubtitleText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_gutter_size" android:text="@string/trial_starter_pack_subtitle_text" android:textAlignment="center" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintBottom_toTopOf="@id/trialStarterPackValuesLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/trialStarterPackTitleText" />
    <LinearLayout android:orientation="horizontal" android:id="@id/trialStarterPackValuesLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/trial_starter_pack_offers_margin_top" android:layout_marginBottom="@dimen/trial_starter_pack_offers_margin_top" android:divider="?android:listDivider" android:showDividers="middle" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/trialStarterPackSubtitleText">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/trial_starter_pack_offer_text_size" android:textColor="@color/trial_starter_pack_offer_text_color" android:id="@id/trialStarterPackMinutesText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_minutes_offer" android:includeFontPadding="false" android:fontFamily="@font/oswald_bold" android:textAlignment="center" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_light_gray" android:id="@id/trialStarterPackMinutesLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_minutes_label" android:includeFontPadding="false" android:textAllCaps="true" android:fontFamily="@font/oswald_bold" android:textAlignment="center" app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/trial_starter_pack_offer_text_size" android:textColor="@color/trial_starter_pack_offer_text_color" android:id="@id/trialStarterPackSMSText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_sms_offer" android:includeFontPadding="false" android:fontFamily="@font/oswald_bold" android:textAlignment="center" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_light_gray" android:id="@id/trialStarterPackSMSLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_sms_label" android:includeFontPadding="false" android:textAllCaps="true" android:fontFamily="@font/oswald_bold" android:textAlignment="center" app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/trial_starter_pack_offer_text_size" android:textColor="@color/trial_starter_pack_offer_text_color" android:id="@id/trialStarterPackDataText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_data_offer" android:includeFontPadding="false" android:fontFamily="@font/oswald_bold" android:textAlignment="center" />
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_light_gray" android:id="@id/trialStarterPackDataLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trial_starter_pack_data_label" android:includeFontPadding="false" android:textAllCaps="true" android:fontFamily="@font/oswald_bold" android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
