<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/ContentContainer"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/root_success_linear" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/updateImage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_edge_margin" android:src="@null" android:scaleType="centerCrop" app:layout_constraintBottom_toTopOf="@id/titleText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/titleText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fragment_update_title_text" android:includeFontPadding="false" app:layout_constraintBottom_toTopOf="@id/subtitleText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/updateImage" style="@style/TitleText" />
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/subtitleText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/soft_update_layout_subtitle_margin_top" android:text="@string/fragment_update_subtitle_text" android:includeFontPadding="false" app:layout_constraintBottom_toTopOf="@id/visitPlayStoreNowButton" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/titleText" style="@style/DefaultSubtitleText" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/White" android:id="@id/visitPlayStoreNowButton" android:background="@drawable/default_state_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/fragment_update_button_margin_bottom" android:text="@string/fragment_update_button_text" app:layout_constraintBottom_toTopOf="@id/callSupportText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/DefaultButtonStyle" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_medium_gray" android:gravity="center" android:id="@id/callSupportText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/common_edge_margin" android:text="@string/fragment_update_help_text" android:fontFamily="@font/proximanova_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
