<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appBarLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsingToolbarLayout" app:title="@string/login_help_needed_title" style="@style/CollapsingToolbar">
            <androidx.appcompat.widget.Toolbar android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_collapseMode="pin" />
            <androidx.appcompat.widget.AppCompatImageButton android:id="@id/helpNeededBackButton" app:layout_collapseMode="pin" style="@style/BackButtonToolbarIcon" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/contentView" android:paddingBottom="350.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/forgotUsernameLayout" android:background="@drawable/group_light_frame_background" android:padding="24.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="4.0dip" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:textSize="16.0sp" android:textColor="@color/text_dark_gray" android:gravity="center_vertical" android:id="@id/forgotUsernameLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_help_forgot_username" android:fontFamily="@font/proximanova_bold" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/forgotPasswordLayout" android:background="@drawable/group_light_frame_background" android:padding="24.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/forgotUsernameLayout">
                <TextView android:textSize="16.0sp" android:textColor="@color/text_dark_gray" android:gravity="center_vertical" android:id="@id/forgotPasswordLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_help_forgot_password" android:fontFamily="@font/proximanova_bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout android:layout_gravity="bottom" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
        <androidx.appcompat.widget.AppCompatButton android:enabled="true" android:textSize="16.0sp" android:id="@id/buttonContinue" android:background="@drawable/default_state_button" android:layout_width="fill_parent" android:layout_height="52.0dip" android:layout_marginTop="@dimen/common_edge_margin" android:text="@string/continue_button" android:textAlignment="center" android:layout_marginStart="@dimen/common_edge_margin" android:layout_marginEnd="@dimen/common_edge_margin" style="@style/DefaultButtonStyle" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
