<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@drawable/save_money_dashboard_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="fill_parent" style="@style/ContentContainer">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white_80_percent" android:id="@id/saveMoneyLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_money_save_money_text_margin_top" android:text="@string/save_money_save_money_text" android:textAllCaps="true" android:fontFamily="@font/proxima_nova_extrabold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/save_money_header_text_size" android:textColor="@color/save_money_header_text_color" android:id="@id/headerTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_money_header_text_margin_top" android:text="@string/save_money_header_text" android:textAllCaps="true" android:fontFamily="@font/oswald_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/saveMoneyLabel" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/save_money_subtitle_text_size" android:textColor="@color/white_90_percent" android:id="@id/subtitleTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/save_money_subtitle_text" android:fontFamily="@font/proximanova_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/headerTextView" />
        <View android:id="@id/saveMoneyButton" android:layout_width="@dimen/circle_arrow_button_size" android:layout_height="@dimen/circle_arrow_button_size" android:layout_marginTop="@dimen/save_money_circle_arrow_button_margin_top" android:foreground="@drawable/ic_circle_arrow_button" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />
        <androidx.appcompat.widget.AppCompatImageView android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@null" android:scaleType="fitEnd" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/saveMoneyButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
